# fsm

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
fsm/: __init__.py  automaton.py  dot.py
tests/: test_fsm.py
